--- a/src/pkg_website_llm/pkg_website_llm/static/style_chatbotOLD.css
+++ b/src/pkg_website_llm/pkg_website_llm/static/style_chatbotOLD.css
@@ -5,7 +5,6 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #E7E7E4;
-    zoom: 90%;
 }
 
 .layout {
@@ -20,9 +19,6 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
-    border-radius: 10px;
-    font-size: 28px;
-    margin-bottom: 20px;
 }
 
 .main {
@@ -41,16 +37,15 @@ body {
 .footer {
     background-color: #333;
     color: white;
-    margin-top: 20px;
     text-align: left;
     padding: 20px;
     flex-shrink: 0; /* Footer bleibt am unteren Rand */
-    border-radius: 10px;
 }
 
 .picture-container {
     margin-top: 20px;
-    margin-right: 20px;
+    margin-left: 20px;
+    margin-right: 10px;
     display: flex;
     flex: 1;
     padding: 20px;
@@ -61,7 +56,8 @@ body {
 
 .chat-container {
     margin-top: 20px;
-    margin-left: 20px;
+    margin-right: 30px;
+    margin-left: 10px;
     width: 800px;
     height: 590px;
     max-width: 100%;
@@ -146,59 +142,32 @@ body {
     cursor: pointer;
 }
 
-#dropdown-menu {
-    color: #333;
-    margin-right: 10px;
-    background-color: #fff;
-    border-radius: 20px;
-    border: 1px solid #ccc;
-    text-align: center;
-    width: 130px;
-  }
-
 #disapprove-btn {
+    padding: 10px 20px;
     border: none;
     background-color: #f34437;
     color: #fff;
     border-radius: 20px;
     cursor: pointer;
-    width: 750px;
-    height: 50px;
-    align-self: flex-end; /* Align the object to the right */
 }
 
 #approve-btn {
+    padding: 10px 20px;
     border: none;
-    background-color: #799165;
+    background-color: #BFDAA7;
     color: #fff;
     border-radius: 20px;
     cursor: pointer;
-    width: 750px;
-    height: 50px;
-    align-self: flex-end; /* Align the object to the right */
 }
 
 #send-btn:hover {
     background-color: #BFDAA7;
 }
 
-table{
-    width: 520px;
-    height: 50px;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
-    border-radius: 10px;
-    margin-right: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    vertical-align: middle;
-    font-size: 20px;
-}
-td{
-    padding: 10px;
-}
+
+table,
+td,
 th {
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-    font-size: larger;
+	border: 1px solid black;
+    background-color: #2666c0;
 }
