--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -29,7 +29,7 @@
 
         <div class="picture-container" style="color: white">
             <h2 style="color: white" >Pack Planning</h2>
-            <img id="image" src="Platzhalter.png" alt="placeholder" width="480" height="480">
+            <img id="image" src="PackPlanBild.png" alt="placeholder" onerror="this.onerror=null; this.src='Platzhalter.png';" width="480" height="480">
         </div>
 
         <div class="chat-container" style="color: white">
@@ -68,10 +68,11 @@
         </div>
 
         <div class="running-nodes" style="color: white">
-            <table id="myTable1">
+            <table id="NodeTable">
                 <thead>
                     <tr>
                         <th>Laufende Nodes</th>
+                        <th>  </th>
                     </tr>
                 </thead>
                 <tbody>
