parameterServer replaced by Json file as well

--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="picture-container" style="color: white">
-            <h2 style="color: white" >Pack Planning</h2>
-            <img id="image_Pack" src="PackPlanBild.png" alt="placeholder" onerror="this.onerror=null; this.src='Platzhalter.png';" width="480" height="480">
+            <h2 id ="pack_heading" style="color: white" >Pack Planning</h2>
+            <img id="image_Pack" src="PackPlanBild.png" alt="" onerror="this.onerror=null; this.src='Platzhalter.png';" width="480" height="480">
         </div>
 
         <div class="chat-container" style="color: white">
