Fixed Caching of UserInput and cleanup

--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -29,8 +29,10 @@
 
         <div class="picture-container" style="color: white">
             <h2 id ="pack_heading" style="color: white" >Pack Planning</h2>
-            <img id="image_Pack" src="PackPlanBild.png" alt="" onerror="this.onerror=null; this.src='Platzhalter.png';" width="480" height="480">
+            <img id="image_Pack" src="PackPlanBild.png" alt="" onerror="this.onerror=null; this.src='Platzhalter.png';" width="480" height="400">
+            <p id ="pack_heading_text" style="color: white" ></p>
         </div>
+
 
         <div class="chat-container" style="color: white">
             <div class="chat-box" id="chat-box">
