--- a/src/pkg_website_llm/pkg_website_llm/static/style_chatbot.css
+++ b/src/pkg_website_llm/pkg_website_llm/static/style_chatbot.css
@@ -59,6 +59,20 @@ body {
     flex-direction: column; 
 }
 
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-grow: 1; /* Hauptinhalt wächst, um den Platz zu füllen */
+}
+
+.header-container h1 {
+    margin: 0;
+    color: white;
+    text-align: center;
+    flex: 1; /* Dies erlaubt dem h1-Element, den gesamten verfügbaren Platz zu nutzen */
+}
+
 .chat-container {
     margin-top: 20px;
     margin-left: 20px;
