Website LLM text fix, currently Detections hard coded

--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -39,7 +39,7 @@
 
         <div class="chat-container" style="color: white">
             <div class="chat-box" id="chat-box">
-                <div id= "InitialMessage" class="message bot-message">Hallo, Ich bin das AIP-LLM! <br> Ich kenne die detektierten Objekte sowie deren Gewicht und Abmessungen und ich kann dir Fragen dazu beantworten. <br> Wähle hierzu im Drop-Down die passende Option ("Chat" oder "Szenenchat"). <br> Mit der Option "Szenenchat" nutzt das LLM Kontextinformationen der detektierten Objekte, die Option "Chat" kennt diese nicht. <br> Wenn du direkt Objekte packen möchtest dann nutze "Befehl". </div>
+                <div id= "InitialMessage" class="message bot-message">Hallo,<br> Ich bin das LLM von AIP! <br> Ich kenne die detektierten Objekte sowie deren Gewicht und Abmessungen. <br> Außerdem stehe ich dir für Fragen dazu zur Verfügung. <br> Über das Dropdown-Menü gibt es drei verschiedene Optionen zur Interaktion: Chat, Szenenchat und Befehl.<br> Wohingegen das LLM bei "Chat" nicht auf Szeneninformationen zurückgreift, werden im Modus "Szenenchat" die Kontextinformationen der detektierten Objekte genutzt. <br> Die Option "Befehl" wird eingesetzt, wenn Objekte direkt gepackt werden sollen.</div>
             </div>
             
             <div class="input-container">
